[project] fixing compatibility problems
... and replacing outdated Commons-* dependencies